--- a/src/index.css
+++ b/src/index.css
@@ -158,13 +158,18 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
+    background-image: url("./img/classRoom.jpg");
+  background-position: center;
+  background-size: cover;
+  /*
   background: url("./img/bg-pattern.png"), #7b4397;
   background: url("./img/bg-pattern.png"), -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
   background: url("./img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  */
 }
 
 header.masthead .header-content {
-  max-width: 500px;
+  max-width: 700px;
   margin-bottom: 100px;
   text-align: center;
 }
@@ -289,7 +294,7 @@ section.features .feature-item i {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("./img/bg-cta.jpg");
+  background-image: url("./img/classRoom.jpg");
   background-position: center;
   background-size: cover;
 }
