--- a/src/index.css
+++ b/src/index.css
@@ -303,6 +303,9 @@ section.cta {
 .bg-img-group {
   background-image: url("./img/classRoom.jpg");
 }
+.bg-img-smart-goals-group {
+  background-image: url("./img/smart_goals_workshop.jpeg");
+}
 section.cta .cta-content {
   position: relative;
   z-index: 1;
