--- a/src/team.css
+++ b/src/team.css
@@ -144,6 +144,7 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
     background: none repeat scroll 0 0 #FFFFFF;
     border: 4px solid #FFFFFF;
     width: 100%;
+    height: 100%;
     border-radius: 50%;
 }
 
