--- a/src/index.css
+++ b/src/index.css
@@ -207,11 +207,11 @@ header.masthead .device-container .screen img {
 
 section.download {
   position: relative;
-  padding: 150px 0;
+  padding: 65px 0;
 }
 
 section.download h2 {
-  font-size: 50px;
+  font-size: 30px;
   margin-top: 0;
 }
 
@@ -233,11 +233,11 @@ section.download .badges .badge-link img {
     display: inline-block;
     margin-bottom: 0;
   }
-}
-
-@media (min-width: 768px) {
   section.download h2 {
-    font-size: 70px;
+    font-size: 45px;
+  }
+  section.download {
+    padding: 90px 0;
   }
 }
 
